--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../src/App.css">
   <link rel="stylesheet" type="text/css" href="../src/font-awesome/css/all.css">
-  <title>Document</title>
+  <link rel="icon" href="bitcoin.ico">
+  <title>Crypto-Con</title>
 </head>
 
-<body>
+<body style="height: 100%;">
 
-  <div id="root">
+  <div id="root" style="height: 100%;">
 
   </div>
-
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
