--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../src/App.css">
   <link rel="stylesheet" type="text/css" href="../src/font-awesome/css/all.css">
-  <link rel="icon" href="bitcoin.ico">
+  <link rel="icon" href="../src/assets/bitcoin.ico">
   <title>Crypto-Con</title>
 </head>
 
